Changes for 1.6.1
* Undoing update to java Substance 7.1, in order to maintain compatibility with Java 5. (veqryn)

* Created edit option to change the amount of unit bombing damage on any and all units which can be damaged by bombing. (veqryn)

* Created edit option to change the amount of unit hitpoint damage on any and all units which can take more than 1 point of hit damage. (veqryn)

* Created edit option to remove technology from a player, except that shipyards and industrial technology can never be removed, and any technology that uses triggers is pointless to remove and removing will not undo their effect. (veqryn)

* Created edit option to add technology to a player. (veqryn)

* Adding methods to ensure that any power sharing technology (like British to UK Pacific) will still roll for war bonds even if its capital is taken, so long as the shared power is not able to have the warbonds technologies. (veqryn)

* Allowing additional nations to share the cost of technology, and creating a good user interface that dynamically adjusts to show how much is being paid by each nation. (veqryn)

* Created an option in Play-By-Forum and Play-By-Email to send the move summary after the combat move phase, in addition to the summary at the end of the turn. This is to help with OOL and scrambling orders. (veqryn)

* Abstracted EndTurnPanel into AbstractForumPosterPanel, then created MoveForumPosterPanel. (veqryn)

* Created new game option, "Remove All Tech Tokens At End Of Turn", which will remove tech tokens after each tech roll. (veqryn)

* Make savegames for long games, games with many players, and games with many battles, much smaller. (veqryn)

* Changing how Battle Records get added and removed from game data through the Change Factory to be more memory efficient. (veqryn)

* Adding an option for "None" to the list of territory effects. (veqryn)
